	all : allow macro typed parameters (other than Expr)
	flash : added flash11 apis
	neko : added support for https to haxe.Http (using hxssl library)
	all : added haxe.Int64
	all : added haxe.Int32 isNeg,isZero,ucompare, fixed overflows for js/flash8/php
	all : bugfix when optimizing inlined immediate function call
	all : fixed "using" on macro function

2011-01-30: 2.07
	all : fixed completion support with --remap
	all : added macros, added --interp
	all : removed 'here' special identifier
	neko : fixed neko.Web.getParamsString() returning "null" instead of ""
	flash9 : fixed issue with @:bind
	flash9 : added some missing errors
	flash9 : fixed TypedDictionary.exists
	all : added @:build and @:autoBuild for enums and classes
	neko : Std.parseFloat now returns NaN with invalid string
	php: fixed Array.push must return the current length (issue 219)
	php: fixed EReg.replace (issue 194)
	php: FileSystem.readDirectory now skips '.' and '..' to be consistent with neko (issue 226)
	flash9 : add trace text on stage (always over current and subclips)
	flash9 : delay SWF initialization until it's added on stage and stageWidth > 0
	         (this can be disabled with -D dontWaitStage)
	all : added haxe.Timer.measure
	all : added Lambda.indexOf and Lambda.concat
	all : no longer allow inline vars as metadata values
	neko : added getFieldsNames to neko.db.ResultSet (supported in Neko 1.8.2 mysql driver)
	all : added --macro and haxe.macro.Compiler
	all : allow macro type patches
	flash9 : changed --gen-hx-classes implementation
		now use 'haxe -swf-lib lib.swf --gen-hx-classes' instead
	flash9 : added @:getter and @:setter
	all : added @:require
	flash9 : moved vector utils functions from flash.Lib to flash.Vector
	flash9 : added support for FP 10.1 and 10.2
	flash9 : added @:meta(Meta(k="v")) support
	all : improved #if support (fixed ! precedence)
	all : lookup unqualified types in all package hierarchy and not only in current package